--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,18 +7,35 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
 
         <activity
-            android:name="co.devcenter.android.sample.MainActivity"
+            android:name=".MainActivity"
             android:label="@string/app_name">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity android:name=".SeperateActivity"
+            android:parentActivityName=".MainActivity"
+            android:label="Seperate">
 
         </activity>
+
+        <activity android:name=".NoButtonActivity"
+            android:parentActivityName=".MainActivity"
+            android:label="No Button">
+
+        </activity>
+
+        <activity android:name=".InBarActivity"
+            android:parentActivityName=".MainActivity"
+            android:label="Inside Bar">
+
+        </activity>
+
     </application>
 
 </manifest>
