--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.3"
 
     defaultConfig {
-        applicationId "co.devcenter.android.sample"
+        applicationId "co.intentservice.chatui.sample"
         minSdkVersion 16
         targetSdkVersion 23
         versionCode 1
@@ -21,7 +21,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
+    androidTestCompile 'junit:junit:4.12'
 
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile project(':library')
