--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,5 +24,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
 
     compile 'com.android.support:appcompat-v7:23.4.0'
-    compile project(':library')
+    compile 'co.intentservice.android-chat-ui:chat-ui:0.1.1'
 }
