Sender's profile pic in chat view option added

--- a/chat-ui/build.gradle
+++ b/chat-ui/build.gradle
@@ -55,6 +55,9 @@ dependencies {
     compile "com.android.support:design:${supportLibVer}"
 
     compile 'pl.tajchert:waitingdots:0.2.0'
+
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
 }
 
 
