--- a/chat-ui/build.gradle
+++ b/chat-ui/build.gradle
@@ -26,7 +26,7 @@ ext {
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    buildToolsVersion '28.0.1'
 
     defaultConfig {
         minSdkVersion 16
@@ -47,14 +47,14 @@ ext {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile 'junit:junit:4.12'
-    compile 'com.android.support:support-v4:23.0.0'
-    compile "com.android.support:appcompat-v7:${supportLibVer}"
-    compile "com.android.support:cardview-v7:${supportLibVer}"
-    compile "com.android.support:design:${supportLibVer}"
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    androidTestImplementation 'junit:junit:4.12'
+    implementation 'com.android.support:support-v4:23.4.0'
+    implementation "com.android.support:appcompat-v7:${supportLibVer}"
+    implementation "com.android.support:cardview-v7:${supportLibVer}"
+    implementation "com.android.support:design:${supportLibVer}"
 
-    compile 'pl.tajchert:waitingdots:0.2.0'
+    implementation 'pl.tajchert:waitingdots:0.2.0'
 }
 
 
