--- a/chat-ui/build.gradle
+++ b/chat-ui/build.gradle
@@ -25,12 +25,12 @@ ext {
 }
 
 android {
-    compileSdkVersion 23
+    compileSdkVersion 27
     buildToolsVersion '28.0.1'
 
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 23
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
     }
@@ -43,16 +43,19 @@ android {
 }
 
 ext {
-    supportLibVer = '23.4.0'
+    supportLibVer = '27.1.1'
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     androidTestImplementation 'junit:junit:4.12'
-    implementation 'com.android.support:support-v4:23.4.0'
+    implementation 'com.android.support:support-v4:27.1.1'
     implementation "com.android.support:appcompat-v7:${supportLibVer}"
     implementation "com.android.support:cardview-v7:${supportLibVer}"
     implementation "com.android.support:design:${supportLibVer}"
+
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
 
     implementation 'pl.tajchert:waitingdots:0.2.0'
 }
