--- a/chat-ui/build.gradle
+++ b/chat-ui/build.gradle
@@ -54,8 +54,11 @@ dependencies {
     implementation "com.android.support:cardview-v7:${supportLibVer}"
     implementation "com.android.support:design:${supportLibVer}"
 
-    implementation 'com.github.bumptech.glide:glide:4.8.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+    implementation 'com.facebook.fresco:fresco:1.10.0'
+    implementation 'com.facebook.fresco:animated-gif:1.10.0'
+
+    //implementation 'com.github.bumptech.glide:glide:4.8.0'
+    //annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
 
     implementation 'pl.tajchert:waitingdots:0.2.0'
 }
