--- a/chat-ui/build.gradle
+++ b/chat-ui/build.gradle
@@ -1,36 +1,13 @@
 apply plugin: 'com.android.library'
 
-ext {
-    bintrayRepo = 'maven'
-    bintrayName = 'android-chat-ui'
 
-    publishedGroupId = 'co.intentservice.android-chat-ui'
-    libraryName = 'chat-ui'
-    artifact = 'chat-ui'
-
-    libraryDescription = 'A UI Chat Interface Library for Android Applications'
-
-    siteUrl = 'https://github.com/IntentService/android-chat-ui'
-    gitUrl = 'https://github.com/IntentService/android-chat-ui'
-
-    libraryVersion = '0.1.3'
-
-    developerId = 'timigod'
-    developerName = 'Timi Ajiboye'
-    developerEmail = 'trypio00@gmail.com'
-
-    licenseName = 'The Apache Software License, Version 2.0'
-    licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-    allLicenses = ["Apache-2.0"]
-}
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    compileSdkVersion 29
 
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 23
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
     }
@@ -42,21 +19,18 @@ android {
     }
 }
 
-ext {
-    supportLibVer = '23.4.0'
-}
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile 'junit:junit:4.12'
-    compile 'com.android.support:support-v4:23.0.0'
-    compile "com.android.support:appcompat-v7:${supportLibVer}"
-    compile "com.android.support:cardview-v7:${supportLibVer}"
-    compile "com.android.support:design:${supportLibVer}"
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    androidTestImplementation 'junit:junit:4.12'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'com.google.android.material:material:1.1.0'
 
-    compile 'pl.tajchert:waitingdots:0.2.0'
+    implementation 'pl.tajchert:waitingdots:0.2.0'
 }
 
 
-apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
-apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
+//apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
+//apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
