--- a/chat-ui/build.gradle
+++ b/chat-ui/build.gradle
@@ -1,6 +1,28 @@
 apply plugin: 'com.android.library'
 
+ext {
+    bintrayRepo = 'maven'
+    bintrayName = 'android-chat-ui'
 
+    publishedGroupId = 'co.intentservice.android-chat-ui'
+    libraryName = 'chat-ui'
+    artifact = 'chat-ui'
+
+    libraryDescription = 'A UI Chat Interface Library for Android Applications'
+
+    siteUrl = 'https://github.com/IntentService/android-chat-ui'
+    gitUrl = 'https://github.com/IntentService/android-chat-ui'
+
+    libraryVersion = '0.1.4'
+
+    developerId = 'timigod'
+    developerName = 'Timi Ajiboye'
+    developerEmail = 'trypio00@gmail.com'
+
+    licenseName = 'The Apache Software License, Version 2.0'
+    licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+    allLicenses = ["Apache-2.0"]
+}
 
 android {
     compileSdkVersion 29
@@ -18,6 +40,7 @@ android {
         }
     }
 }
+
 
 
 dependencies {
